feat: add service records
